gedcom/tests/snapshots/tests__encodings@not_ged.ged-2.snap
---
source: gedcom/tests/tests.rs
description: "Hello, world!\r\n"
expression: "format!(\"{:?}\",\n    Report::new(err).with_source_code(NamedSource::new(filename, data)))"
input_file: gedcom/tests/encoding_inputs/not_ged.ged
---
gedcom::encoding::not_gedcom

  × Unable to determine encoding of GEDCOM file
  ╰─▶ Input does not appear to be a GEDCOM file
  help: GEDCOM files must start with a '0 HEAD' record, but this was not found
