gedcom/tests/snapshots/tests__encodings@unknown.ged-2.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n0 TRLR\r\n"
expression: kdl
input_file: gedcom/tests/encoding_inputs/unknown.ged
---
HEAD
TRLR
