gedcom/tests/snapshots/tests__encodings@utf16le_bom.ged-2.snap
---
source: gedcom/tests/tests.rs
description: "��0\u0000 \u0000H\u0000E\u0000A\u0000D\u0000\r\u0000\n\u00000\u0000 \u0000T\u0000R\u0000L\u0000R\u0000\r\u0000\n\u0000"
expression: kdl
input_file: gedcom/tests/encoding_inputs/utf16le_bom.ged
---
HEAD
TRLR
